# dMock

./: .gitignore  README.md  Readme.md  design.md  pyproject.toml
dmock/: database.db  db_init.py  entry.py  main.py  settings.py
dmock/api/: mock_caller.py  mocks.py  operator.py  overseer.py  schemas.py
dmock/middleware/: cache_manager.py  dispatcher.py  json_transform.py  manager.py  matchers.py  mock_manager.py  settings_manager.py
dmock/misc/: misc.py
dmock/model/: models.py
dmock/models/: models.py  setup.py
dmock/models/migrations/models/: 0_20240416180259_init.py  1_20240416180633_add_data.py
dmock/tests/: test.py  test_api.py  test_dispatcher.py  test_json_transform.py  test_models.py  test_poc.py  test_schemas.py
dmock/ui/assets/: connector.js  gridjs.6.2.0.js  script.js  style.css
dmock/ui/html/: 404.html  index.html
